# parallel-neuro-simulation

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  README.md
docker/: README.md
docker/buildroot-env/: Dockerfile  README.md
docker/neuro-simulation-env/: Dockerfile  README.md
docker/patches/: 01.patch  02.patch
docker/riscv-env/: Dockerfile
docker/riscv-poky-build/: Dockerfile  README.md
docker/rocket-chip-env/: Dockerfile  README.md  install_config.txt
resources/: 32pointsConverted.csv  32pointsM.csv  3Curve32Point.csv  bbl  core-image-riscv-riscv64-20181008214839.rootfs.ext2  core-image-riscv-riscv64-20181014202224.rootfs.ext2
resources/scripts/: convertOffset.py
sample-configs/: README.md
sample-configs/neuron-configs/: simple_synapse.json
sample-configs/run-configs/: example-config.ini
src/: CMakeLists.txt
src/factory/: Factory.h
src/global/: GlobalDefinitions.h
src/include/json-3.1.2/: json.hpp
src/include/lut_support-a7d4c9fa7d6a4c1a5c1494d29d99617b392c8255/: README.md  lut_support.h
src/logging/: ResultLogger.h  TimeLogger.cpp
src/main/: main.cpp
src/main/config/: ProgramConfig.cpp  ProgramConfig.h  ProgramConfigTrivialMethods.cpp
src/main/factory/: EquationFactory.cpp  Factory.h  InitialConditionFactory.cpp  IntegrationFactory.cpp
src/main/global/: GlobalDefinitions.h
src/main/logging/: AsyncBuffer.cpp  AsyncBuffer.h  ResultLogger.cpp  ResultLogger.h  TimeLogger.cpp  TimeLogger.h  hpm_counters.cxx
src/main/math/: HardLUT.cpp  HodgkinHuxley.cpp  HodgkinHuxleyCurrent.cpp  HodgkinHuxleyCurve.cpp  HodgkinHuxleyLUT.cpp  HodgkinHuxleyLUTCurve.cpp  LUT.h  ODE.h  SoftLUT.cpp
src/main/rocc/: fixed_integrator.h  lut_support.h
src/main/state/: ConfigAdapter.cpp  ConfigAdapter.h  ConfigAdapterTrivialMethods.cpp
src/main/util/: ArgParser.cpp  ArgParser.h  JsonToProtobufConfigConverter.cpp  JsonToProtobufConfigConverter.h
src/math/: ODE.h
src/proto/: CMakeLists.txt  input_config.proto  protobuf_config.proto
src/test/: .SoftLUT_test.cpp.swp  ConfigFileTest.cpp  HardLUTROM_test.cpp  SoftLUT_test.cpp  main_test.cpp
src/test/run-configs/: test-config.ini
src/util/: ArgParser.cpp  ArgParser.h
